all document for HW5

--- a/homework5d3.html
+++ b/homework5d3.html
@@ -1,18 +1,61 @@
 <!DOCTYPE html> 
 <html lang="en"> 
 <head>
+  <style>
+    .chart div {
+      font: 10px sans-serif;
+      background-color: steelblue;
+      text-align: right;
+      padding: 3px;
+      margin: 1px;
+      color: white;
+    }
+    </style>
+    
+  <style>
+.chart rect {
+  fill: steelblue;
+}
+
+.chart text {
+  fill: white;
+  font: 10px sans-serif;
+  text-anchor: end;
+}
+
+    </style>
+    
+
 <meta charset="UTF-8">
 <script src="js/d3.min.js"></script>
 <title>D3 Homework and tutorial</title>
 </head>
 <body>
+  <svg class="chart"></svg>
 	<div class="greetings">
 		<h1>Greetings!</h1>
 		<p>Hello World!</p>
-	</div>
+  </div>
+ 
+  <div class="chart"></div>
 <script>
 // d3 code goes here.. 
 d3.select("div.greetings").append("h2").text("Hello World! ").append("span").text("from D3.js");
+var data = [4, 8, 15, 16, 23, 42,1000];
+var width = 420,
+    barHeight = 20;
+var x = d3.scaleLinear()
+  .domain([0, d3.max(data)])
+  .range([0, width]);
+
+  d3.select(".chart")
+  .selectAll("div")
+    .data(data)
+  .enter().append("div")
+    .style("width", function(d) { return x(d) + "px"; })
+    .text(function(d) { return d; });
+
+
 </script>
 </body>
 </html>
